wtx-macros/tests/ui/error_enum/responses_can_not_have_type_params.rs
#[wtx_macros::pkg(api(Foo), data_format(json))]
mod pkg {
  #[pkg::req_data]
  struct Req;

  #[pkg::res_data]
  struct Res<T>(T);
}

fn main() {
}
